# WechatServer

./: .gitignore  CMakeLists.txt  compile.sh  main.cc  main_epoll.cc  main_mysql.cc  main_select.cc
inc/: globaldefine.h
inc/files/: fileworker.h
inc/messageworkers/: basemessageworker.h  flushmessageworker.h  friendsmessageworker.h  settingmessageworker.h  tcpstandardmessage.h
inc/mysql/: mysqlconfig.h  mysqlworker.h
inc/tcpserver/: basetcpserver.h  tcpserver_epoll.h  tcpserverhelper.h  threadpair.h
inc/tcpserver/notuse/: tcpserver.h  tcpserver_select.h
src/files/: fileworker.cc
src/messageworkers/: basemessageworker.cc  flushmessageworker.cc  friendsmessageworker.cc  settingmessageworker.cc  tcpstandardmessage.cc
src/mysql/: mysqlconfig.cc  mysqlworker.cc
src/tcpserver/: basetcpserver.cc  tcpserver.cc  tcpserver_epoll.cc  tcpserver_select.cc  tcpserverhelper.cc
src/tcpserver/notuse/: threadpair.cc
